<resources>
    <string name="app_name">QRCRED</string>
    <string name="login_usuario">Login do Usuário</string>
    <string name="cartao">Cartão</string>
    <string name="login_convenio">Login do Convenio</string>
    <string name="usuario_convenio">Usuário do Convenio</string>
    <string name="senha">Senha</string>
    <string name="HOST">https://qrcred.makecard.com.br/</string>
    <string name="associado">Associado</string>
    <string name="parcelas">Parcelas</string>
    <string name="action_settings">Settings</string>
    <string name="msgOk">OK</string>
    <string name="CidadeRotulo">Cidade</string>
    <string name="UFrotulo">UF</string>
    <string name="Categoriarotulo">Categoria</string>
    <string name="n_numero">Número</string>
    <string name="iv_desc_close_dialog">Fechar caixa de diálogo de imagens</string>
    <string name="title_activity_mostra_cupon">MostraCuponActivity</string>
    <string name="razaosocial">RazaoSocial</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="parcela">Parcela</string>
    <string name="valor">Valor</string>
    <string name="cadastro_confirmado_com_sucesso">Cadastro confirmado com sucesso.</string>
    <string name="gravar">Gravar</string>
    <string name="e_mail">E-mail</string>
    <string name="raz_o_social_ou_nome_pessoa_f_sica">Razão Social ou Nome Pessoa física</string>
    <string name="saldo_a_resgatar">informe o valor a resgatar</string>
    <string name="cep">CEP</string>
    <string name="pessoa_f_sica">Pessoa física</string>
    <string name="pessoa_jur_dica">Pessoa jurídica</string>
    <string name="consulta_cep">Consulta Cep</string>
    <string name="retornar">Retornar</string>
    <string name="um_sms_contendo_o_usu_rio_e_senha_ser_enviado_para_o_celular_que_voce_cadastrou_para_entrar_no_app">Anote o Usuário e Senha, enviamos para o e-mail que vc cadastrou. Esses dados serão necessários para entrar o App ou no site https://www.qrcred.makecard.com.br</string>
    <string name="textview">TextView</string>
    <string name="FINALIZAR">finalizar</string>
    <string name="saldo_atual">SALDO ATUAL</string>
    <string name="meu_saldo">Meu saldo</string>
    <string name="COMPARTILHAR">compartilhar</string>
    <string name="opera_o_realizada_com_sucesso">OPERAÇÃO REALIZADA COM SUCESSO!</string>
    <string name="estabelecimento">ESTABELECIMENTO</string>
    <string name="complemento">Complemento</string>
    <string name="telefone_fixo">Telefone fixo</string>
    <string name="celular">Celular</string>
    <string name="ncelular">Número do Celular</string>
    <string name="cnpj">CNPJ</string>
    <string name="nome_do_respons_vel">Nome do responsável</string>
    <string name="usu_rio">Usuário :</string>
    <string name="traco">-</string>
    <string name="senha_">Senha :</string>
    <string name="click_no_bot_o_abaixo_somente_quando_estiver_localizado_em_seu_estabelecimento">Click no botão abaixo, somente quando estiver localizado em seu estabelecimento</string>
    <string name="definir">Definir</string>
    <string name="latitude">Latitude:</string>
    <string name="trestraco">---</string>
    <string name="longitude">Longitude:</string>
    <string name="nomefantasia">nomefantasia</string>
    <string name="razaosocial_">razaosocial</string>
    <string name="endere_o_">endereço</string>
    <string name="bairro_">bairro</string>
    <string name="cidade_">Cidade</string>
    <string name="cnpjoucpf">cnpjoucpf</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="senha_cart_o">Senha cartão</string>
    <string name="valor_parcela">Valor Parcela :</string>
    <string name="digite_o_total">Digite o Total</string>
    <string name="digite_o_resgate">Digite o valor</string>
    <string name="descriçao_da_compra">Referente a: (opcional)</string>
    <string name="digite_o_pix">Digite a chave pix</string>
    <string name="digite_o_cart_o">Digite o Cartão</string>
    <string name="n_mero__">Número</string>
    <string name="e_mail__">E-mail</string>
    <string name="cpf__">CPF</string>
    <string name="celular__">Celular</string>
    <string name="mantenha_seus_dados_atualizados">Mantenha seus dados atualizados</string>
    <string name="salvar__">Salvar</string>
    <string name="raz_o_social">Razão Social</string>
    <string name="endere_o">Endereço</string>
    <string name="bairro">Bairro</string>
    <string name="n_mero">Número</string>
    <string name="cnpj_">Cnpj</string>
    <string name="cpf_">Cpf</string>
    <string name="email_">Email</string>
    <string name="nome_para_contato_">Nome para contato</string>
    <string name="gravar_">Gravar</string>
    <string name="mobile">Mobile</string>
    <string name="usu_rio_">USUÁRIO</string>
    <string name="portador_do_cart_o">Portador do cartão</string>
    <string name="rede_conveniada">Rede conveniada</string>
    <string name="politica_de_privacidade">Politica de Privacidade</string>
    <string name="versao">Versão : </string>
    <string name="categoria">Categoria</string>
    <string name="nome_">Nome</string>
    <string name="telefone_">Telefone</string>
    <string name="celular_">Celular</string>
    <string name="este_qr_code_pode_ser_usado_no_lugar_do_cart_o">QR-CODE do cartão</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="endere_o__">Endereço</string>
    <string name="bairro__">Bairro</string>
    <string name="textviewmes">textViewMes</string>
    <string name="textviewperiodo">textViewPeriodo</string>
    <string name="cupom">Cupom</string>
    <string name="qrcode_">QrCode</string>
    <string name="entrar__">Entrar</string>
    <string name="retornar_">Retornar</string>
    <string name="foto_cupom_2">foto_cupom_2</string>
    <string name="_0_min">0 min</string>
    <string name="rota">ROTA</string>
    <string name="sat">SATELITE</string>
    <string name="_0_km">0 km</string>
    <string name="map">MAPA</string>
    <string name="icon_location">icon_location</string>
    <string name="image_cupom">image_cupom</string>
    <string name="logo_1">logo_1</string>
    <string name="icone_location2">icone_location2</string>
    <string name="celular_de_whatsapp">Celular de WhatsApp?</string>
    <string name="compatilha">Compatilha</string>
    <string name="busca_convenio">busca convenio</string>
    <string name="icone_peson">icone_peson</string>
    <string name="icone_entra">icone_entra</string>
    <string name="icone_estab">icone_estab</string>
    <string name="substituir_a_foto_atual">Substituir a foto atual</string>
    <string name="foto_comprovante_opcional">Foto comprovante (Opcional)</string>
    <string name="retorna_home">Retornar</string>
    <string name="per_do_de_vendas_x_recebimento">Perído de vendas X recebimento</string>
    <string name="per_odo_de_vendas">Período de vendas</string>
    <string name="_04_de_janeiro_a_n_03_de_fevereiro">04 de Janeiro a\n 03 de Fevereiro</string>
    <string name="_04_de_fevereiro_a_n_03_de_mar_o">04 de Fevereiro a\n 03 de Março</string>
    <string name="_04_de_mar_o_a_n_03_de_abril">04 de Março a\n 03 de Abril</string>
    <string name="_04_de_abril_a_n_03_de_maio">04 de Abril a\n 03 de Maio</string>
    <string name="_04_de_maio_a_n_03_de_junho">04 de Maio a\n 03 de Junho</string>
    <string name="_04_de_junho_a_n_03_de_julho">04 de Junho a\n 03 de Julho</string>
    <string name="_04_de_julho_a_n_03_de_agosto">04 de Julho a\n 03 de Agosto</string>
    <string name="_04_de_agosto_a_n_03_de_setembro">04 de Agosto a\n 03 de Setembro</string>
    <string name="_04_de_setembro_a_n_03_de_outubro">04 de Setembro a\n 03 de Outubro</string>
    <string name="_04_de_outubro_a_n_03_de_novembro">04 de Outubro a\n 03 de Novembro</string>
    <string name="_04_de_novembro_a_n_03_de_dezembro">04 de Novembro a\n 03 de Dezembro</string>
    <string name="_04_de_dezembro_a_n_03_de_janeiro">04 de Dezembro a\n 03 de Janeiro</string>
    <string name="recebimento">Recebimento</string>
    <string name="_5_dia_util_de_n_mar_o">5º dia util de\n Março</string>
    <string name="_5_dia_util_de_n_abril">5º dia util de\n Abril</string>
    <string name="_5_dia_util_de_n_maio">5º dia util de\n Maio</string>
    <string name="_5_dia_util_de_n_junho">5º dia util de\n Junho</string>
    <string name="_5_dia_util_de_n_julho">5º dia util de\n Julho</string>
    <string name="_5_dia_util_de_n_agosto">5º dia util de\n Agosto</string>
    <string name="_5_dia_util_de_n_setembro">5º dia util de\n Setembro</string>
    <string name="_5_dia_util_de_n_outubro">5º dia util de\n Outubro</string>
    <string name="_5_dia_util_de_n_novembro">5º dia util de\n Novembro</string>
    <string name="_5_dia_util_de_n_dezembro">5º dia util de\n Dezembro</string>
    <string name="_5_dia_util_de_n_janeiro">5º dia util de\n Janeiro</string>
    <string name="_5_dia_util_de_n_fevereiro">5º dia util de\n Fevereiro</string>
    <string name="j_sou_cadastrado">Já sou cadastrado</string>
    <string name="n_o_sou_cadastrado">Não sou cadastrado</string>
    <string name="Imprimir">Imprimir</string>
    <string name="meusdados">Meus dados</string>
    <string name="title_activity_home2_menu">Home2ActivityMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_saldo">Saldo</string>
    <string name="menu_extrato">Extrato</string>
    <string name="menu_convenios">Convenios</string>
    <string name="menu_qrcode">QRCode</string>
    <string name="menu_sair">Sair</string>
    <string name="ok">Sim</string>
    <string name="cancel">nao</string>
    <string name="minhasvendas">Meus lançamentos</string>
    <string name="minhalocalizacao">Definir minha geolocalização</string>
    <string name="tabela_pagto">Tabela de recebimentos</string>
    <string name="endereco_recebimento">Endereço de recebimento</string>
    <string name="title_activity_tela_container_convenio">TelaContainerConvenio</string>
    <string name="autorizador">Autorizar</string>
    <string name="nomeconvenio">Convenio</string>
    <string name="submit">Atualizar</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="recuperar_senhax">Recuperar senha</string>
    <string name="email">Email</string>
    <string name="on">On</string>
    <string name="of">of</string>
    <string name="title_activity_main_redefinir_senha">MainActivityRedefinirSenha</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="redefinir">Redefinir a senha</string>
    <string name="titular">Titular</string>
    <string name="confirmar_o_email_digitado">Confirma o email digitado</string>
    <string name="confirma_o_nome_do_tilular">Confirma o nome do tilular</string>
    <string name="redefinir_a_senha">Esqueci minha senha</string>
    <string name="nome_do_convenio">Nome do convenio</string>
    <string name="gravar2">Gravar</string>
    <string name="cpf_rotulo">CPF: </string>
    <string name="cnpj_rotulo">CNPJ: </string>
    <string name="esqueci_minha_senha">Esqueci minha Senha</string>
    <string name="proximo">Proximo</string>
    <string name="solicitar">Solicitar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_mostra">MapMostraActivity</string>
    <string name="my_map_api_key">AIzaSyApW3SFbrgRnC9tG0VJiToLr9v--SNicls</string>
    <string name="antecipacao">Saque o crédito</string>
    <string name="antecipacaorotulo">Antecipação</string>
</resources>