<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lancamento"
            android:icon="@drawable/ic_baseline_credit_card_24"
            android:title="@string/autorizador"/>
        <item
            android:id="@+id/nav_meusdadosconv"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/meusdados"/>
        <item
            android:id="@+id/nav_minhasvendas"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/minhasvendas"/>
        <item
            android:id="@+id/nav_minhalocalizacao"
            android:icon="@drawable/ic_baseline_add_location_24"
            android:title="@string/minhalocalizacao"/>
        <item
            android:id="@+id/nav_tabelarecebimentos"
            android:icon="@drawable/ic_baseline_ballot_24"
            android:title="@string/tabela_pagto"/>
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_sair" />
    </group>
</menu>
