<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFotoCupom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutfoto">
                <ProgressBar
                    android:id="@+id/pbFoto"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/imageViewCupom"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_foto_foreground"
                    android:contentDescription="@string/foto_cupom_2"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-120dp"
                    android:visibility="gone">

                        <ProgressBar
                            android:id="@+id/progressBar_conv2"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="46dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:visibility="gone" />
                </FrameLayout>
                <Button
                    android:id="@+id/btnTirarFoto"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="bottom"
                    android:text="@string/foto_comprovante_opcional"
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/btnRetornarHome"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="bottom"
                    android:textSize="20sp"
                    android:text="@string/retorna_home" />

                <Button
                    android:id="@+id/btnSalvarFotoCupon"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="20sp"
                    android:text="@string/gravar" />


        </LinearLayout>
</ScrollView>
